<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.louisstudio.daily_notes.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginRight="36dp"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="128dp"
                android:padding="18dp"
                android:layout_height="128dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <TextView
            android:id="@+id/lineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/meet_daily_notes_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/redesigned_and_rebuilt_nbringing_wonderful_features"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
    <Button
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:background="#00000000"
            android:elevation="0dp"
            android:layout_height="wrap_content" android:id="@+id/enterBu" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
